[package]
name = "rdb-analyzer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bumpalo = { version = "3.7", features = ["collections", "boxed"] }
log = "0.4"
pretty_env_logger = "0.4"
indexmap = "1.6"
phf = { version = "0.8", features = ["macros"] }
rand = "0.8"
hex = "0.4"
rmp-serde = "0.15"
snap = "1"
serde_yaml = "0.8"
base64 = "0.13"
byteorder = "1"
similar = { version = "1", features = ["inline"] }
smallvec = { version = "1", features = ["serde"] }
rpds = { version = "0.9", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-recursion = "0.3.2"
petgraph = "0.5"

[build-dependencies]
lalrpop = "0.19.6"

[dev-dependencies]
console = "0.14.0"
