[package]
name = "rdb-pgsvc"
version = "0.1.0"
edition = "2018"
description = "RefineDB playground service."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdb-analyzer = { path = "../rdb-analyzer" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
bumpalo = { version = "3.7", features = ["collections", "boxed"] }
similar = { version = "1", features = ["inline"] }
serde_yaml = "0.8"
rmp-serde = "0.15"
hex = "0.4"
sha2 = "0.9"
libc = "0.2"
petgraph = "0.5"
rpds = { version = "0.9", features = ["serde"] }
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
