[package]
name = "rdb-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdb-analyzer = { path = "../rdb-analyzer" }
rdb-proto = { path = "../rdb-proto" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
foundationdb = "0.5"
structopt = "0.3"
once_cell = "1"
bumpalo = { version = "3.7", features = ["collections"] }
similar = { version = "1", features = ["inline"] }
serde_yaml = "0.8"
console = "0.14.0"
rmp-serde = "0.15"
hex = "0.4"
sha2 = "0.9"
base64 = "0.13"
maplit = "1"
uuid = { version = "0.8", features = ["v4"] }

